vix/tests/checker-corpus/reject/duplicate-field.vix
struct Config {
    path: Path,
    path: String,
}

fn main() -> Int {
    1
}
